# soaring

./: .gitattributes  .gitignore  .test-exempt  README.md  card.py  data_gen.py  energy.py  experiment.py  feature_list.json  fly.py  glider_sim.py  keystone.py  planner.py  progress.txt  pyproject.toml  reactive.py  report.py  task_list.json  train.py
.claude/: settings.json
.claude/rules/: agentic-workflow.md
.githooks/: pre-commit  pre-merge-commit
cli/: gen_docs.py  land.py  log.py  menu.py  rehydrate.py  review.py  task.py
scripts/: README.md  check_all.py  gen_docs.py  guard_state.py  hook_probe.py  land.py  log.py  menu.py  rehydrate.py  review.py  task.py
tests/: conftest.py  test_app.py  test_camera.py  test_card.py  test_colors.py  test_data_gen.py  test_energy.py  test_experiment.py  test_frames.py  test_gate_logic.py  test_glider_sim.py  test_hud.py  test_keystone.py  test_panel.py  test_planner.py  test_reactive.py  test_report.py  test_scene.py  test_train.py
viewport/: app.py  camera.py  colors.py  frames.py  hud.py  panel.py  scene.py
